Use bsb and watchman

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
   <script>
     // You can also require other files to run in this process
-    require('./_build/self/main.js')
+    require('./lib/js/src/main.js')
   </script>
 </html>
